--- a/public/css/style.css
+++ b/public/css/style.css
@@ -237,6 +237,22 @@ body {
 h1, h2, h3 {
   font-family: 'Oswald', sans-serif; }
 
+[class^='select2'] {
+  border-radius: 0 !important;
+  background-color: #3a3b3e !important;
+  border-color: transparent !important; }
+  [class^='select2']:not(.select2-dropdown):not(.select2-selection__choice__remove):not(.select2-selection__choice) {
+    width: 100% !important; }
+  [class^='select2'] .select2-selection__choice {
+    background-color: #777; }
+
+[id^="select2"] {
+  border-radius: 0 !important;
+  background-color: #3a3b3e !important; }
+
+.select2-results {
+  background-color: #3a3b3e !important; }
+
 form em {
   font-size: .8em; }
 @media (max-width: 991px) {
@@ -270,10 +286,6 @@ form.delete button.confirm {
     background: transparent; }
 form select {
   width: 100%; }
-form [class^='select2'] {
-  border-radius: 0 !important; }
-form .select2-dropdown {
-  border-radius: 0 !important; }
 form ::-webkit-input-placeholder {
   color: #777 !important; }
 form :-moz-placeholder {
@@ -395,6 +407,11 @@ form textarea {
   .blocklink:hover {
     background-color: rgba(0, 0, 0, 0.2);
     cursor: pointer; }
+    .blocklink:hover .dropdown-toggle {
+      background-color: rgba(204, 64, 32, 0.7); }
+      .blocklink:hover .dropdown-toggle:hover {
+        background-color: rgba(204, 64, 32, 0.6);
+        color: #fff; }
   .blocklink .profile-img {
     width: calc(100% - .4em);
     margin: .2em; }
@@ -998,10 +1015,6 @@ a.accent:hover, a.accent:focus, a.accent:active {
   .profile-wrapper a.message i.fa {
     margin-right: 1em; }
 
-@media (max-width: 991px) {
-  .team-members .members .col-md-2, .team-members .admins .col-md-2, .team-members .requests .col-md-2 {
-    width: 33% !important; } }
-
 .message-view h1 {
   cursor: pointer;
   display: inline-block;
@@ -1128,24 +1141,24 @@ label.control-label + p.info {
   margin: auto; }
 
 @media (max-width: 47em) {
-  #search-results .blocklink-wrapper, #admin .blocklink-wrapper {
+  #search-results .blocklink-wrapper, #admin .blocklink-wrapper, #users .blocklink-wrapper {
     display: block; }
-    #search-results .blocklink-wrapper .blocklink, #admin .blocklink-wrapper .blocklink {
+    #search-results .blocklink-wrapper .blocklink, #admin .blocklink-wrapper .blocklink, #users .blocklink-wrapper .blocklink {
       float: none;
       min-height: 5.5em;
       width: 100%;
       border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
-      #search-results .blocklink-wrapper .blocklink .profile-img, #admin .blocklink-wrapper .blocklink .profile-img {
+      #search-results .blocklink-wrapper .blocklink .profile-img, #admin .blocklink-wrapper .blocklink .profile-img, #users .blocklink-wrapper .blocklink .profile-img {
         height: 4em;
         width: 4em;
         margin-right: 1em;
         float: left; }
-        #search-results .blocklink-wrapper .blocklink .profile-img img, #admin .blocklink-wrapper .blocklink .profile-img img {
+        #search-results .blocklink-wrapper .blocklink .profile-img img, #admin .blocklink-wrapper .blocklink .profile-img img, #users .blocklink-wrapper .blocklink .profile-img img {
           height: 100%;
           width: auto; }
-      #search-results .blocklink-wrapper .blocklink p.name, #admin .blocklink-wrapper .blocklink p.name {
+      #search-results .blocklink-wrapper .blocklink p.name, #admin .blocklink-wrapper .blocklink p.name, #users .blocklink-wrapper .blocklink p.name {
         font-size: 1.5em; }
-    #search-results .blocklink-wrapper :last-child, #admin .blocklink-wrapper :last-child {
+    #search-results .blocklink-wrapper :last-child, #admin .blocklink-wrapper :last-child, #users .blocklink-wrapper :last-child {
       border-bottom: 0; } }
 
 .events .event {
@@ -1194,5 +1207,9 @@ label.control-label + p.info {
 @media (max-width: 350px) {
   #admin .blocklink .profile-img {
     display: none; } }
+
+@media (max-width: 991px) {
+  #users .dropdown button[type=submit] {
+    margin-top: 0; } }
 
 /*# sourceMappingURL=style.css.map */
