--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -152,14 +152,37 @@ body {
 }
 h1,h2,h3 { font-family: 'Oswald', sans-serif; }
 
+// Select 2
 [class^='select2'] {
-	border-radius: 0 !important; background-color: #3a3b3e !important;
-	border-color: transparent !important;
-	&:not(.select2-dropdown):not(.select2-selection__choice__remove):not(.select2-selection__choice) { width: 100% !important; }
-	.select2-selection__choice { background-color: #777; }
+	border-radius: 0 !important; border-color: transparent !important;
+	&:focus, &:active, &:hover { border-radius: 0 !important; border-color: transparent; }
+	&:not(.select2-dropdown)
+	 :not(.select2-selection__choice__remove)
+	 :not(.select2-selection__choice)
+	 :not(.select2-container.select2-container--default.select2-container--open) {
+		width: 100% !important;
+	}
+	.select2-selection__choice { background-color: #494949 !important; }
 }
-[id^="select2"] { border-radius: 0 !important; background-color: #3a3b3e !important; }
-.select2-results { background-color: #3a3b3e !important; }
+.select2-container,
+.select2-search__field,
+.select2-search__field,
+.select2-selection.select2-selection--multiple {
+	background-color: #3a3b3e !important;
+}
+.select2-results, .select2-dropdown, .select2-results_options, .select2-results__option {
+	background-color: #373839 !important;
+	.selectbox-result {
+		height: 6em; width: 100%;
+		&, .row { margin: 0; }
+		.col-md-12 { width: 100%; padding: 0;}
+		p.name { font-size: 1.5em; }
+		.profile-img {
+			height: 5em; padding: .5em 0;  width: 100%; text-align: center;
+			img { height: 100%; width: auto; display: inline-block; }
+		}
+	}
+}
 
 form {
 	em { font-size: .8em; }
@@ -497,12 +520,15 @@ a.accent:hover, a.accent:focus, a.accent:active { color: $accent; }
 
 .leaderboard {
 	margin-bottom: -15px;
+	@media (max-width: 615px) { overflow-x: scroll; overflow-y: hidden; }
 	&.divider { border-color: transparent; }
 	>.col-md-12 {
 
 		>:nth-child(2) { margin-top: 2px; }
 		.row.leaderboard-team {
+			@extend .persist-cols;
 			background-color: $overlay-color; padding: .3em; height: 6em;
+			@media (max-width: 615px) { width: 585px; }
 			&:not(.place-1):not(.place-2):not(.place-3):not(:last-child) { border-bottom: 1px solid rgba(54, 53, 53, 0.47);}
 			&[class^="place-"] {
 				height: 10em;
@@ -521,6 +547,20 @@ a.accent:hover, a.accent:focus, a.accent:active { color: $accent; }
 				&.place-2 .title, &.place-3 .title { font-size: 2em; }
 				.title { font-size: 3em; }
 				.profile-img { height: 8em !important; width: 8em !important; }
+				@media #{$mobile} {
+					&.place-2, &.place-3 {
+						>.col-md-2 { width: 8.33%; }
+						>.col-md-10 { width: 91.66%; }
+						>.col-md-10>.row{
+							>.col-md-4 { width: 16.66%; }
+							>.col-md-8 {
+								width: 83.33%;
+								.score>.col-md-12 { width: 33.33%; margin-left: 66.66%; padding: 0; }
+							}
+						}
+					}
+					.title { font-size: 1.5em !important; text-align: center; }
+				}
 			}
 			&.my-team { transform: scale(1.03); padding: 10px 15px; background-color: rgba(54, 53, 53, 0.47); }
 			&>[class^="col-md-"]>.row,
@@ -649,23 +689,25 @@ a.accent:hover, a.accent:focus, a.accent:active { color: $accent; }
 .divider { border-top: 1px solid $accent; margin-top: 48px; }
 
 .profile-wrapper {
+	@extend .persist-cols-mobile;
+
 	h3 { margin-top: 2em; }
 	.profile-title {
-		margin-top: 2em; text-align: center;
+		@media #{$mobile} { margin-top: 2em; text-align: center; }
+		@media #{$tablet} { margin-bottom: 1em; }
 	}
-	>.row>.col-md-12>.profile-img {
+	>.row>.col-md-4>.profile-img {
 		margin: 2em auto;
 		&.profile {
-			width: 250px; max-width: 250px; display: inline-block;
-			@media #{$mobile-bootstrap} {
-				width: 100%;
-				img { width: 100%; }
-			}
+			width: 100%; max-width: 250px;
+			@media #{$mobile} {  display: inline-block; }
+			img { width: 100%; }
 		}
 	}
 	.stats-col {
 		.stats {
-			@media #{$mobile-bootstrap} {
+			@media #{$tablet} { margin-top: 2em; }
+			@media #{$mobile} {
 				max-width: 21em; margin: auto;
 				.col-md-4 { width: 33%; float: left; }
 			}
@@ -673,7 +715,7 @@ a.accent:hover, a.accent:focus, a.accent:active { color: $accent; }
 				text-align: center;
 				>i { margin-right: 1em; }
 				.ratio { margin-right: 0; }
-				@media #{$mobile-bootstrap} {
+				@media #{$mobile} {
 					span:not(.ratio) { display: none; }
 					i { margin-right: 0; }
 				}
@@ -719,8 +761,8 @@ a.accent:hover, a.accent:focus, a.accent:active { color: $accent; }
 		.btn-primary { margin-top: 0; }
 	}
 }
-.persist-cols {
-	@media #{$mobile-bootstrap} {
+.persist-cols-mobile {
+	@media #{$tablet} {
 		.col-md-1 { width: 8.33%; float: left; }
 		.col-md-2 { width: 16.66%; float: left; }
 		.col-md-3 { width: 25%; float: left; }
@@ -744,9 +786,35 @@ a.accent:hover, a.accent:focus, a.accent:active { color: $accent; }
 		.col-md-offset-10 { margin-left: 83.33%; }
 	}
 }
+.persist-cols {
+	@media #{$mobile-bootstrap} {
+		.col-md-1 { width: 8.33%; float: left; }
+		.col-md-2 { width: 16.66%; float: left; }
+		.col-md-3 { width: 25%; float: left; }
+		.col-md-4 { width: 33.33%; float: left; }
+		.col-md-5 { width: 41.66%; float: left; }
+		.col-md-6 { width: 50%; float: left; }
+		.col-md-7 { width: 58.33%; float: left; }
+		.col-md-8 { width: 66.66%; float: left; }
+		.col-md-9 { width: 75%; float: left; }
+		.col-md-10 { width: 83.33%; float: left; }
+		.col-md-11 { width: 91.66%; float: left; }
+
+		.col-md-offset-1 { margin-left: 8.33%; }
+		.col-md-offset-2 { margin-left: 16.66%; }
+		.col-md-offset-3 { margin-left: 25%; }
+		.col-md-offset-4 { margin-left: 33.33%; }
+		.col-md-offset-5 { margin-left: 41.66%; }
+		.col-md-offset-6 { margin-left: 50%; }
+		.col-md-offset-7 { margin-left: 58.33%; }
+		.col-md-offset-8 { margin-left: 66.66%; }
+		.col-md-offset-9 { margin-left: 75%; }
+		.col-md-offset-10 { margin-left: 83.33%; }
+		.col-md-offset-11 { margin-left: 91.66%; }
+	}
+}
 
 // Dashboard
-
 .bigbtn {
 	height: 6em; text-align: center; cursor: pointer;
 	&.participate {
@@ -790,12 +858,13 @@ label.control-label + p.info { margin-top: -.4em; }
 	}
 }
 
+// Search results
 #search-results {
 	@media #{$mobile} {
 		.blocklink-wrapper {
 			display: block;
 			.blocklink {
-				float: none; min-height: 5.5em; width: 100%; border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+				float: none; min-height: 5.5em; width: 100%; border-bottom: 1px solid rgba(0, 0, 0, 0.2); background-color: rgba(0,0,0,.1);
 				.profile-img {
 					height: 4em; width: 4em; margin-right: 1em; float: left;
 					img { height: 100%; width: auto; }
@@ -807,6 +876,7 @@ label.control-label + p.info { margin-top: -.4em; }
 	}
 }
 
+// Events wrapper
 .events {
 	.event {
 		@extend .persist-cols;
@@ -822,6 +892,7 @@ label.control-label + p.info { margin-top: -.4em; }
 	:last-child { border-bottom: 0; }
 }
 
+// About section on home page
 .about {
 	@media (max-width: 520px) {
 		.persist-cols>[class^="col-md-"]{ width: 100%; float: none; }
@@ -840,6 +911,7 @@ label.control-label + p.info { margin-top: -.4em; }
 	blockquote { border-color: $accent; }
 }
 
+// Admin page
 #admin {
 	@extend #search-results;
 	.blocklink {
@@ -850,11 +922,80 @@ label.control-label + p.info { margin-top: -.4em; }
 	}
 }
 
+// User wrapper
 #users {
 	@extend #search-results;
 	.dropdown {
 		button[type=submit] {
 			@media #{$mobile-bootstrap} { margin-top: 0; }
+		}
+	}
+}
+
+#settle-game-form {
+	.row {
+		.col-md-4 {
+			@media #{$tablet} {
+				&:last-child { margin-left: 33.33%; }
+				&.draw { position: absolute; height: 2em; top: 0; bottom: 0; left: 33.33%;  margin: auto;; width: 33.33%; }
+			}
+		}
+	}
+	.profile-img {
+		max-width: 150px; display: inline-block;
+		img { width: 100%; }
+	}
+	@media #{$mobile} {
+		.col-md-4 {
+			&:not(:last-child) { margin-bottom: 1em; }
+			>* { padding: 0 5em; }
+		}
+		.profile-img { max-width: 50px; }
+		.float-wrapper, .draw>.title { float: right; }
+		.checkbox { position: absolute; height: 2em; top: 0; bottom: 0; margin: auto; }
+		.clear { clear: both;}
+	}
+}
+.schedule {
+	&#elimination {
+		@media #{$mobile} { overflow-x: scroll; overflow-y: auto; height: 100%; width: 100%;}
+		.rounds {
+			@media #{$mobile} { width: 12em; }
+			@extend .persist-cols;
+			.round {
+				width: 12em;
+				&:not(:last-child) { border-right: 1px solid $text-color; }
+				&.current-round {
+					.game {
+						&:hover { background-color: rgba(255, 43, 0, 0.4); }
+						.game-settle { color: #fff; text-decoration: none; display: inline-block; }
+					}
+				}
+				.game {
+					&:not(:last-child) { margin-bottom: 6em; }
+
+					.participant {
+						height: 10em; text-align: center;
+						.profile-img {
+							max-height: 7em; max-width: 5em; display: inline-block; margin: auto 1em; position: relative;
+							img { height: auto; width: auto; max-height: 100%; max-width: 100%; }
+							.overlay-won {
+								position: absolute; width: 1.5em; height: 1.5em; background-color: $overlay-color;
+								top: 0; left: 0; color: gold;
+							}
+						}
+						&.team_1, &.team_2 {
+							p.title { height: 2.2em; width: 100%; text-align: center; }
+						}
+					}
+				}
+			}
+		}
+	}
+	&#round-robin {
+		.profile-img {
+			width: 100%; max-height: 100%;
+			img { width: 100%; height: auto;}
 		}
 	}
 }
